# pypoetry_template

./: Makefile  README.md  cookiecutter.json
root/: pyproject.toml
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/tests/: test_package_version.py
